20110427 (T.S.)
 - first stab at supporting fragmented streams. This is still untested
   and is 'hackish' since it was done very quickly and could not be
   designed from scratch (bwds compatibility).
20110425 (T.S.)
 - src/hostStream.c, src/padProto.h, src/padStream.c: removed implicit
   4-channel assumption (NCHANS).
   Replaced by run-time detection of channel number via C1 flag.
 - src/padProtoHost.c: added new -1 flag to request single-channel data.
   Handle single-channel data when dumping stream.
 - src/padStream.c, src/padStream.h: Removed 'idx' argument from padStreamSend.
   This routine now iterates over all the fragments of a stream and calls
   'getdata' repeatedly.
   Fragmented streams must request multiple of 1k payload size.
   Fragmented stream uses its own XID and changes this each time a
   new stream packet is sent. This allows for association of fragments.
20110422 (T.S.)
 - README, README.drvPadUdpComm: updated documentation.
 - src/padStream.c, src/padStream.h:
    o Added PadStreamStartStopCB() additional 'PadRequest' argument
      so that e.g., protocol version may be verified/checked.
    o Added 'nchannels' argument to 'getdata' callback so that channel
      numbers other than 4 can be supported.
    o PadStripSimValRec now contains an array of PADRPLY_STRM_NCHANNELS
      instead of four discrete values. This helps supporting different
      values for nchannels in the simulation 'getdata' callback.
    o padStreamSim_iir2_getdata() and streamTest() 'getdata' callbacks
      now support variable 'nchannels'.
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h: Added drvPadUdpCommPostReply()
   [convenience routine for LLRF].
20110422 (T.S.)
 - src/padProto.h, src/padProtoHost.c:
   added new 'more-fragments' flag to 'index' and a macro to extract
   the index number (masking the MF flag).
 - src/padStream.c:
   No longer reject non-zero index (preparation for idx support in 
   drvPadUdpComm).
20110421 (T.S.)